[flake8]
; E722 - bare "except"
ignore = E722
max-line-length = 90
exclude =
    .git,
    .tox,
    .eggs,
    __pycache__,
    build,
    dist,
    agile_mesh_network.egg-info

[aliases]
test = pytest

[metadata]
name = agile_mesh_network
author = Kostya Esmukov
author-email = kostya@esmukov.ru
summary = agile_mesh_network project
license = proprietary

[files]
packages =
   agile_mesh_network

[entry_points]
console_scripts =
    negotiator = agile_mesh_network.negotiator_main:main

[pbr]
skip_authors = True
skip_changelog = True
